# eveIndustryHelper

./: .env.example  .gitignore  LICENSE  README.md  app.py  eveAPI.py  pyproject.toml  settings.py
config/: .env.example
controllers/: oauth.py
services/: corpAssets.py  itemLookup.py  restock.py
tests/http/: general_build.http  restock.http  rig_restock.http  ship_mats_restock.http
