[tool.poetry]
name = "eve_market_helper"
version = "0.1.0"
description = "EVE Online Market Helper Tools"
authors = ["David Olson <david@deolson.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
requests = "^2.23"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
